added button css

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         <!-- Buttons -->
         <div class="button-contianer">
             <button class="twitter-button" id="twitter" title="Tweet This!">
-                <i class="fab fa-twitter"></i>
-            </button>
+                <i class="fab fa-twitter"></i></button>
             <button id="new-quote">New Quote</button>
         </div>
     </div>
