added JSON output to HTML and javascript styling

--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
         <div class="quote-text">
             <i class="fas fa-quote-left">            </i>
             <span id="quote">
-                Just because it's a quote doesn't mean you should listen.
             </span>
         </div>
         <!-- Author -->
         <div class="quote-author" id="quote-author">
-            <span id="author">Me</span>
+            <span id="author"></span>
         </div>
         <!-- Buttons -->
         <div class="button-contianer">
