--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="quote-container" id="quote-containter">
+    <div class="quote-container" id="quote-container">
         <!-- Quote element here -->
         <div class="quote-text">
             <i class="fas fa-quote-left">            </i>
@@ -25,12 +25,14 @@
             <span id="author"></span>
         </div>
         <!-- Buttons -->
-        <div class="button-contianer">
+        <div class="button-container">
             <button class="twitter-button" id="twitter" title="Tweet This!">
                 <i class="fab fa-twitter"></i></button>
             <button id="new-quote">New Quote</button>
         </div>
     </div>
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
